[gd_scene load_steps=4 format=3 uid="uid://d4m5g3at6qoip"]

[ext_resource type="Script" path="res://gui/deck_builder.gd" id="1_yfrfj"]
[ext_resource type="Texture2D" uid="uid://d1d6rumtmbi4k" path="res://assets/deck_background.png" id="2_0k1fo"]
[ext_resource type="FontFile" uid="uid://bw8tebfadoyd6" path="res://assets/fonts/Minecraft.ttf" id="3_5f26q"]

[node name="DeckBuilder" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_yfrfj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_0k1fo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_5f26q")
theme_override_font_sizes/normal_font_size = 32
text = "Todas Cartas (crie seu baralho)"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CardsContainer" type="HFlowContainer" parent="MarginContainer/GridContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/GridContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2

[node name="QuantityLabel" type="RichTextLabel" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_5f26q")
theme_override_font_sizes/normal_font_size = 16
text = "0 "
fit_content = true
autowrap_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/GridContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_5f26q")
theme_override_font_sizes/normal_font_size = 16
text = "de 20 cartas"
fit_content = true
autowrap_mode = 0

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DeckContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/VBoxContainer2/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreateDeckButton" type="Button" parent="MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "PRONTO"

[connection signal="pressed" from="MarginContainer/GridContainer/VBoxContainer2/CreateDeckButton" to="." method="_on_create_deck_button_pressed"]
